@@ -1,7 +1,8 @@
 version 2.5.12
 --------------
 Thanks once again to Andrew Loftus for help sovling a complex bug and
-difficult to reproduce.
+difficult to reproduce. Thanks to Ron Lockwood-Childs for investigations,
+feedback and suggestion about dar behavior with negative dates.
 
 version 2.5.11
 --------------
