@@ -152,6 +152,20 @@ namespace libdar
 				       memory_pool *pool);
     static mode_t get_file_permission(const string & path);
 
+    template <class T> void check_negative(T & val,
+					   user_interaction & ui,
+					   const char *inode_path,
+					   const char *nature)
+    {
+	if(val < 0)
+	{
+	    ui.pause(tools_printf(gettext("Found negative date (%s) for inode %s, can we read it as if it was zero (1st January 1970 at 00:00:00 UTC)?"),
+				  nature,
+				  inode_path));
+	    val = 0;
+	}
+    }
+
 ///////////////////////////////////////////////////////////////////
 ///////////////// filesystem_hard_link_read methods ///////////////
 ///////////////////////////////////////////////////////////////////
@@ -194,6 +208,18 @@ namespace libdar
 	    else
 	    {
 #ifdef LIBDAR_MICROSECOND_READ_ACCURACY
+		check_negative(buf.st_atim.tv_sec,
+			       get_ui(),
+			       ptr_name,
+			       gettext("atime, data access time"));
+		check_negative(buf.st_mtim.tv_sec,
+			       get_ui(),
+			       ptr_name,
+			       gettext("mtime, data modification time"));
+		check_negative(buf.st_ctim.tv_sec,
+			       get_ui(),
+			       ptr_name,
+			       gettext("ctime, inode change time"));
 		datetime atime = datetime(buf.st_atim.tv_sec, buf.st_atim.tv_nsec/1000, datetime::tu_microsecond);
 		datetime mtime = datetime(buf.st_mtim.tv_sec, buf.st_mtim.tv_nsec/1000, datetime::tu_microsecond);
 		datetime ctime = datetime(buf.st_ctim.tv_sec, buf.st_ctim.tv_nsec/1000, datetime::tu_microsecond);
@@ -205,6 +231,18 @@ namespace libdar
 		if(ctime.is_null()) // assuming an error avoids getting time that way
 		    ctime = datetime(buf.st_ctime, 0, datetime::tu_second);
 #else
+		check_negative(buf.st_atime,
+			       get_ui(),
+			       ptr_name,
+			       gettext("atime, data access time"));
+		check_negative(buf.st_mtime,
+			       get_ui(),
+			       ptr_name,
+			       gettext("mtime, data modification time"));
+		check_negative(buf.st_ctime,
+			       get_ui(),
+			       ptr_name,
+			       gettext("ctime, inode change time"));
 		datetime atime = datetime(buf.st_atime, 0, datetime::tu_second);
 		datetime mtime = datetime(buf.st_mtime, 0, datetime::tu_second);
 		datetime ctime = datetime(buf.st_ctime, 0, datetime::tu_second);
