@@ -9,6 +9,8 @@ from 2.5.11 to 2.5.12
   20479 characters for it display the start of that line
 - fixed bug in file listing (-[ option) leading some directories and their
   content to be excluded in a somehow rare condition
+- improved behavior when dar reads a negative date. Instead of aborting
+  it now asks the user if it can substitue such value by zero
 
 from 2.5.10 to 2.5.11
 - minor feature: displays the archive header which is never ciphered and
